fixed how the star filter click wraps the currently selected stars

--- a/client/src/components/RnR/Ratings.css
+++ b/client/src/components/RnR/Ratings.css
@@ -47,18 +47,22 @@
 }
 
 #eachStarFilter {
-  margin-top: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 10px;
   margin-bottom: 25px;
   font-size: small;
 }
 
 .starFilters {
+  margin-top: 10px;
   font-weight: lighter;
   margin-left: 5px;
   margin-right: 5px;
   border: 1px solid black;
   padding: 0px 5px;
   border-radius: 5px;
+  width: 55px;
 }
 
 #removeFilters {
@@ -67,6 +71,7 @@
   border-radius: 15px;
   background-color: lightgray;
   padding: 0px 5px;
+  /* font-size: smaller; */
 }
 
 #starBarChart {
@@ -96,15 +101,14 @@
 }
 
 .starBar {
-  width: 75%;
-  max-height: 13px;
+  width: 70%;
+  max-height: 12px;
   background-color: lightgray;
-  margin-top: 5px;
+  margin-top: 6px;
   border-radius: 10px;
 }
 
 .starBar5, .starBar4, .starBar3, .starBar2, .starBar1 {
-  /* width: 50%; */
   border-radius: 10px;
   background-color: darkgreen;
 }
